@@ -1,3 +1,8 @@
+Thu Jan 24 02:13:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* insns.def (expandarray): fix stack inc.
+	* bootstraptest/test_knownbug.rb, test_massign.rb: move a fixed test.
+
 Thu Jan 24 01:00:34 2008  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* encoding.{c, h} (rb_usascii_encoding): added.
